crates/db/src/dialect/snapshots/switchyard_db__dialect__tests__d1_script_create.snap
---
source: crates/db/src/dialect/mod.rs
expression: "[d.script_create(ObjectKind::Table, table),\nd.script_create(ObjectKind::Procedure, proc),\nd.script_create(ObjectKind::View, commented),\nd.script_create(ObjectKind::Table,\n\"CREATE TABLE t (id int);\\n\"),].join(\"\\n\\n\")"
---
CREATE TABLE sales.orders (id int);

CREATE PROCEDURE sales.archive AS
BEGIN
  NULL;
END;

CREATE VIEW sales.v AS SELECT 1 AS x -- one
;

CREATE TABLE t (id int);
