crates/db/src/dialect/snapshots/switchyard_db__dialect__tests__mysql_insert.snap
---
source: crates/db/src/dialect/mod.rs
expression: "format!(\"{}\\n\\n{}\", d.insert_template(&q, &cols), d.insert_template(&q, &[]))"
---
INSERT INTO sales.`order` (id, line, `Order Date`, total)
VALUES (NULL, NULL, NULL, NULL);

INSERT INTO sales.`order` (column1)
VALUES (NULL);
