crates/db/src/dialect/snapshots/switchyard_db__dialect__tests__mysql_insert_row.snap
---
source: crates/db/src/dialect/mod.rs
expression: "[d.insert_row(&q, &row), d.insert_row(&q, &[])].join(\"\\n\\n\")"
---
INSERT INTO sales.`order` (`Order Date`, `status`, note) VALUES ('2026-10-08', DEFAULT, NULL);

INSERT INTO sales.`order` () VALUES ();
